# kush-deprecated

./: CMakeLists.txt  README.md
contribution/: style.md
doc/: binary-entity-format.txt
example/: counter.kush  exception.kush  heap-sort.kush  linear-search.kush  payment.kush  selection-sort.kush  sum-of-array.kush
example/factorial/: factorial.kush
examples/generator/: generator  if_statement  while_statement
examples/hello/: hello  hello.c
include/: kush.h
include/kush/: AbstractModule.h  Analyzer.h  ClassSymbol.h  Compiler.h  Configuration.h  Context.h  ContextType.h  Error.h  ErrorHandler.h  FunctionSignature.h  FunctionSymbol.h  Lexer.h  LexerError.h  Modifier.h  Parser.h  ParserError.h  Scope.h  ScopeType.h  StringTemplate.h  Symbol.h  SymbolResolutionListener.h  SymbolTable.h  Token.h  TokenType.h  analyzer.h  compiler.h  configuration.h  context.h  error-handler.h  generator.h  lexer.h  module-loader.h  parser.h  scope.h  symbol-loader.h  symbol-table.h  token-stream.h  token.h
include/kush/ast/: ASTAnnotation.h  ASTAnnotationType.h  ASTAnnotations.h  ASTHelper.h  ASTListener.h  ASTNode.h  ASTNodeType.h  ASTPrinter.h  ASTWalker.h  ASTWalkerState.h  ExpressionAnnotation.h
include/kush/ast/context/: AdditiveExpressionContext.h  AndExpressionContext.h  AnnotatedComponentDeclarationContext.h  AnnotationAttributeContext.h  AnnotationContext.h  AnnotationTypeContext.h  AnnotationsContext.h  AssertStatementContext.h  AssignmentExpressionContext.h  BreakStatementContext.h  CatchClauseContext.h  CatchFilterContext.h  ClassDeclarationContext.h  ClassExtendsClauseContext.h  ClassMemberContext.h  ClassSuiteContext.h  CompilationUnitContext.h  ComponentDeclarationContext.h  CompoundStatementContext.h  ConditionalExpressionContext.h  ConstantDeclarationContext.h  ConstantDeclaratorContext.h  Context.h  ContinueStatementContext.h  ElseClauseContext.h  ElseIfClauseContext.h  EmptyStatementContext.h  EnumerateContext.h  EnumerationBaseClauseContext.h  EnumerationDeclarationContext.h  EnumerationSuiteContext.h  EqualityExpressionContext.h  ExclusiveOrExpressionContext.h  ExpressionContext.h  ExpressionsContext.h  FinallyClauseContext.h  ForParameterContext.h  ForStatementContext.h  FunctionArgumentsContext.h  FunctionBodyContext.h  (+39 more)
include/kush/generator/: BinaryEntityBuilder.h  BinaryEntityGenerator.h  ConstantPoolBuilder.h  DataChannel.h
include/kush/lexer/: Lexer.h  LexerError.h  Token.h  TokenChannel.h  TokenStream.h  TokenType.h
include/kush/parser/: Context.h  Parser.h  ParserError.h
include/kush/support/: Error.h  ErrorCode.h  ErrorHandler.h  StackTrace.h
include/kush/symbol-table/: ClassSymbol.h  FunctionSignature.h  FunctionSymbol.h  Modifier.h  Scope.h  ScopeType.h  Symbol.h  SymbolCategory.h  SymbolDefinitionListener.h  SymbolLoader.h  SymbolResolutionListener.h  SymbolTable.h
runtime/: kush-runtime.c  kush-runtime.h
source/: Kush.g4  analyzer.c  compiler.c  configuration.c  context.c  error-handler.c  error.c  generator.c  kush.c  lexer.c  module-loader.c  parser.c  scope.c  symbol-loader.c  symbol.c  token-stream.c  token.c
source/kush/: Compiler.c  Configuration.c  Zen.c  analyzer.c  compiler.c  configuration.c  error-handler.c  error.c  kush.c  lexer.c  parser.c  scope.c  symbol-loader.c  symbol.c  token-stream.c  token.c
source/kush/ast/: AstAnnotation.c  AstAnnotations.c  AstHelper.c  AstListener.c  AstNode.c  AstPrinter.c  AstWalker.c
source/kush/generator/: BinaryEntityBuilder.c  BinaryEntityGenerator.c  ConstantPoolBuilder.c  DataChannel.c
source/kush/lexer/: Lexer.c  Lexer.c.orig  LexerError.c  Token.c  TokenStream.c  TokenStream.c.orig  TokenType.c  TokenType.c.orig
source/kush/parser/: Context.c  Parser.c  ParserError.c
source/kush/support/: Error.c  ErrorHandler.c
source/kush/symbol-table/: Analyzer.c  Modifier.c  SymbolDefinitionListener.c  SymbolLoader.c  SymbolLoader2.c  SymbolResolutionListener.c  SymbolTable.c
source/kush/symbol-table/scope/: Scope.c
source/kush/symbol-table/symbol/: ClassSymbol.c  ConstantSymbol.c  EnumerateSymbol.c  EnumerationSymbol.c  FunctionSignature.c  FunctionSymbol.c  LabelSymbol.c  MemberConstantSymbol.c  MemberVariableSymbol.c  Symbol.c  VariableSymbol.c
